package work4.task1;
// інтерфейс підписника
/**
 * Інтерфейс TaskObserver (OBSERVER у шаблоні Observer).
 * Визначає єдиний метод оновлення, який викликається Об'єктом спостереження (Task) при зміні його внутрішнього стану.
 *
 * @author Журавель Богдана ІО-42
 */
public interface TaskObserver {

    /**
     * Метод, що викликається Об'єктом спостереження для сповіщення підписника про зміну стану.
     * Забезпечує слабку зв'язаність: Task не знає, що саме робить підписник, а лише викликає цей метод.
     *
     * @param taskName Назва завдання, стан якого змінився.
     * @param newStatus Новий стан, на який перейшло завдання.
     */
    void update(String taskName, String newStatus);
}